--- a/UI/appsettings.Development.json
+++ b/UI/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "DataContext": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DataBasename": "agrotools"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
