--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -1,4 +1,16 @@
 {
+  "DataContext": {
+    "AuthorCollectionName": "Author",
+    "FormCollectionName": "Form",
+    "AnswerCollectionName": "Answer",
+    "QuestionCollectionName": "Question",
+    "ConnectionString": "mongodb+srv://Agrotools-Forms:Agrotools@cluster0.oajd0.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+    "DatabaseName": "agrotools"
+  },
+  "Origins": {
+    "WebSystem": "http://localhost:3000",
+    "Mobile": "exp://192.168.1.103:19000"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
