Api ok agora sim

--- a/UI/appsettings.Development.json
+++ b/UI/appsettings.Development.json
@@ -1,7 +1,11 @@
 {
   "DataContext": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DataBasename": "agrotools"
+    "AuthorCollectionName": "Author",
+    "FormCollectionName": "Form",
+    "AnswerCollectionName": "Answer",
+    "QuestionCollectionName": "Question",
+    "ConnectionString": "mongodb+srv://Agrotools-Forms:Agrotools@cluster0.oajd0.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+    "DatabaseName": "agrotools"
   },
   "Logging": {
     "LogLevel": {
