--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -8,7 +8,7 @@
     "DatabaseName": "agrotools"
   },
   "Origins": {
-    "WebSystem": "http://localhost:3000",
+    "WebSystem": "http://127.0.0.1:5500/index.html",
     "Mobile": "exp://192.168.1.103:19000"
   },
   "Logging": {
